<resources>
    <string name="app_name">Roadside Assist</string>
    <string name="no_users_found">No users found!</string>
    <string name="login">Login</string>
    <string name="enter_username">enter username</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="write_a_message">Type a message</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="enter_password">enter_password</string>
    <string name="register">Register</string>
    <string name="returny">Click here to return</string>
    <string name="a_login">Admin Login</string>

</resources>
